--- a/BonNadal/style.css
+++ b/BonNadal/style.css
@@ -1,6 +1,11 @@
 body { 
     background-image: url(dist/img/snowbg_med.png);
-    background-size:cover;
+    background-size:100%;
     background-repeat: no-repeat;
+    margin:0;
+    padding:0;
 }
 
+#container {
+    height: 600px;
+}
